# prompt_config_benchmark

./: .env.example  .gitignore  CLAUDE.md  FRONTEND_README.md  QUICKSTART.md  QUICKSTART_UI.md  README.md  pyproject.toml  requirements.txt  test_langfuse_copy.html
data/configs/: README.md  gpt5-balanced-high-reasoning.json  gpt5-compact.json  gpt5-concise.json  gpt5-detailed.json  gpt5-extended.json  gpt5-mini-balanced.json  gpt5-mini-fast.json  gpt5-minimal.json  gpt5-standard.json  gpt5-thorough.json  gpt5-verbose.json
data/prompts/: README.md  business-idea-cleanup.json  code-review.yaml  creative-story.yaml  explain-concept.yaml  re-organize-idea-hedge-fund.json  summarize.yaml
data/results/: benchmark-bak.db  benchmark-bak2.db  benchmark.db
data/review_prompts/: code-quality-reviewer.json  general-quality-reviewer.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DragCarousel.tsx  MultiRunDialog.tsx  PromptCard.tsx  RankingCard.tsx  RecommendationBanner.tsx  ReviewPromptCard.tsx  ReviewPromptEditor.tsx  (+1 more)
scripts/: add_experiment_runs.py  add_is_acceptable_column.py  add_multi_run_sessions.py  create_config_permutations.py  fix_ai_ranking_status.py  increase_token_limits.py  init_review_prompts.py  migrate_configs_to_db.py  migrate_prompts_to_db.py  reorganize_configs.py  test_parameters.py  verify_parameters.py
specs/: AI_ASSISTED_RANKING_SPEC.md  llm_config_spec.md
src/prompt_benchmark/: __init__.py  analyzer.py  cli.py  config_loader.py  evaluator.py  executor.py  models.py  ranker.py  recommender.py  storage.py
tests/: __init__.py  test_config_loader.py  test_models.py  test_storage.py
(+10 files in other folders)
